flapivor/tests/m3/hopix/typechecker/bad/54-constructor-matching-02.hopix
type T = A

type U = B

val main : Int = case A<> { B<> => 0 }